--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   	<div class="nav">
   		<div class="container">
   			<ul>
-  				<li>Home</li>
-  				<li>Ventures</li>
-  				<li>Speaking</li>
-  				<li>Teaching</li>
-  				<li>Contact</li>
+  				<li><a href="">Home</a></li>
+  				<li><a href="">Ventures</a></li>
+  				<li><a href="">Speaking</a></li>
+  				<li><a href="">Teaching</a></li>
+  				<li><a href="">Contact</a></li>
   			</ul>
 
   	</div>
@@ -34,7 +34,7 @@
 	
 		<div class="hello">
 			<div class="container">
-			<h1>Hello, I'm</br>Luis Alt!</h1>
+			<h1>Hello!</br>I'm Luis Alt.</h1>
 			<p>Over the last decade, I’ve been using design to help people and brands to provide better services. I lead innovation and service design project, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep Reading ...</p>
 			</div>
 		</div>
