--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 				<li>improve the way companies provide services and/or rethink business models from a product to a service strategy</li>
 				<li>help companies understand who their clients are and how they have been experiencing their offers</li>
 			</ul>
-			<p>Some of the clients I worked with:</p>
-			<!--<img src="logos-livework.jpg">-->
+			<p>Some of the clients I've worked with:</p>
+			<img src="img/clients.png">
 			</div>
 		</div>
 
@@ -90,13 +90,14 @@
 			<h1>Speaking</h1>
 			<p>Being an advocate of (the design of) services and a thought-leader in the field, I split my agenda between doing projects and speaking at events (or internally for organisations) in topics such as: Design Thinking, Service Design, Customer Experience, Design Management, High-Performance Cultures and Innovation (Metrics). </p>
 			<p>If you want to have me talking at your event, please reach me at talk@luisalt.com and I will get back shortly.</p>
-			<h3>Upcoming Events:</h3>
+			<!--<h3>Upcoming Events:</h3>
 			<ul>
 				<li>00/00/0000 - Event Name (Location)</li>
 				<li>00/00/0000 - Event Name (Location)</li>
 				<li>00/00/0000 - Event Name (Location)</li>
 			</ul>
 			</div>
+			-->
 		</div>
 
 		<div class="teaching">
@@ -104,6 +105,7 @@
 			<h1>Teaching</h1>
 			<p>Since the beginning of my work in the Service Design field I have been aware that to build an inexisting market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, a workshop based on my first book, down to my very own Innovation School, EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
 			<p>In the US I have taught to Transdisciplinary Design Master students at Parsons New School in New York City while in Brazil, besides teaching at before-mentioned EISE and ESPM, I teach at FAAP’s Innovation Management MBA and have been invited as a guest lecturer from graduate to phD programs all over.</p>
+			<img src="img/universities.jpg">
 			</div>
 		</div>
 
