--- a/index.html
+++ b/index.html
@@ -101,15 +101,18 @@
 		</div>
 
 		<div class="teaching">
+			
 			<div class="container">
 			<h1>Teaching</h1>
 			<p>Since the beginning of my work in the Service Design field I have been aware that to build an inexisting market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, a workshop based on my first book, down to my very own Innovation School, EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
 			<p>In the US I have taught to Transdisciplinary Design Master students at Parsons New School in New York City while in Brazil, besides teaching at before-mentioned EISE and ESPM, I teach at FAAP’s Innovation Management MBA and have been invited as a guest lecturer from graduate to phD programs all over.</p>
-			<img src="img/universities.png"></img>
+			<!--<img src="img/universities.png"></img>-->
 			</div>
+
 		</div>
 
 		<div class="press">
+		
 			<div class="container">
 			<h1>Selected Press,</br>Interviews and Articles</h1>
 			<ul>
@@ -120,15 +123,18 @@
 				<li><a href="http://sds.parsons.edu/desis/service-design-performances-fall-11-series-service-design-and-organizational-change-with-livework/">Service Design Performances at Parsons - "Service Design and Organisational Change with Livework"</a> (english)</li>
 			</ul>	
 			</div>
+
 		</div>
 
 	</div>
 
 	<div class="contact">
+
 		<div class="colophon">
 			<h3>Get in Touch!</h3>
 			<p>I would love to hear from you and am constantly looking for new, interesting people to connect with. If you have something nice to say, reach me at mail@luisalt.com.</p>
 		</div>
+
 		<div class="colophon">
 			<h3>Follow Me!</h3>
 			<p>Although I don’t like the saying, you can keep up with what I do, think and say reading my articles in english at Medium and I post updates on Twitter and Linkedin (although some of them are in portuguese).</p>
