--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<h1>Current Ventures</h1>
 			<p>I am the founder of Livework in Brazil - a global innovation and service design studio - and EISE - the first School of Service Innovation in the world. I created the first Design Thinking course in Latin America at Business School ESPM and I teach at Transdisciplinary Design Master at Parsons New School in New York City, at FAAP’s Innovation-focused MBA program and many other institutions as guest lecturer. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming “Servir Bem para Servir Sempre”, a book about the importance of good services for both large and small businesses with practical advice on how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
 			</br>
-			<img src="img/ventures.png"></img>
+			<!--<img src="img/ventures.png"></img>-->
 			</div>
 		</div>
 
@@ -59,7 +59,7 @@
 				<li>help companies understand who their clients are and how they have been experiencing their offers</li>
 			</ul>
 			<p>Some of the clients I've worked with:</p>
-			<img src="img/livework-clients.png"></img>
+			<!--<img src="img/livework-clients.png"></img>-->
 			</div>
 		</div>
 
@@ -106,12 +106,12 @@
 			<h1>Teaching</h1>
 			<p>Since the beginning of my work in the Service Design field I have been aware that to build an inexisting market in the country I had to prepare other professionals so they could help build it too. From the first Design Thinking course in all of Latin America, founded at São Paulo’s renowned business school ESPM to DTBRontheRoad, a workshop based on my first book, down to my very own Innovation School, EISE, teaching has been an important part of my life. It keeps me connected to new people, new content and pushing me to become a better professional.</p>
 			<p>In the US I have taught to Transdisciplinary Design Master students at Parsons New School in New York City while in Brazil, besides teaching at before-mentioned EISE and ESPM, I teach at FAAP’s Innovation Management MBA and have been invited as a guest lecturer from graduate to phD programs all over.</p>
-			<img src="img/universities.png"></img>
+			<!--<img src="img/universities.png"></img>-->
 			</div>
 
 		</div>
 
-		<div class="press">
+		<!--<div class="press">
 		
 			<div class="container">
 			<h1>Selected Press,</br>Interviews and Articles</h1>
@@ -124,7 +124,7 @@
 			</ul>	
 			</div>
 
-		</div>
+		</div>-->
 
 	</div>
 
