--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 -->
 	<div class="main">
 	
-		<div class="container-fluid hello">
+		<div class="hello">
 			<div class="container">
 			<h1>Hello!</br>I'm Luis Alt.</h1>
 			<p>Over the last decade I’ve been using design to help people and brands to provide better services. I lead innovation and service design projects, I write bestselling books and articles on the subject, I teach at renowned universities around the globe and I speak at events in portuguese, spanish and english.</br></br>Keep reading, keep scrolling...</p>
 			</div>
 		</div>
 
-		<div class="container-fluid ventures">
+		<div class="ventures">
 			<div class="container">
 			<h1>Current Ventures</h1>
 			<p>I am the founder of Livework in Brazil - a global innovation and service design studio - and EISE - the first School of Service Innovation in the world. I created the first Design Thinking course in Latin America at Business School ESPM and I teach at Transdisciplinary Design Master at Parsons New School in New York City, at FAAP’s Innovation-focused MBA program and many other institutions as guest lecturer. I am the author of Design Thinking Brasil, a best-selling book published by Campus-Elsevier and of the upcoming “Servir Bem para Servir Sempre”, a book about the importance of good services for both large and small businesses with practical advice on how to do it. I speak at events globally in portuguese, spanish and english about Service Design, Design Thinking, Customer Experience, Innovation Metrics and High-Performance Cultures. </p>
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 
-		<div class="container-fluid livework">
+		<div class="livework">
 			<div class="container">
 			<h1>Livework</h1>
 			<p>After establishing myself as one of the first Service Design practitioners in Brazil, I decided to bring the first and best agency in the world to the country, becoming a partner for Livework in Latin America. For more than half a decade I’ve been involved in growing the service innovation market by doing projects that:
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="container-fluid eise">
+		<div class="eise">
 			<div class="container">
 			<h1>EISE</h1>
 			<h2>The School of Service Innovation</h2>
@@ -71,21 +71,21 @@
 			</div>
 		</div>
 
-		<div class="container-fluid dtbr">
+		<div class="dtbr">
 			<div class="container">
 			<h1>Design</br>Thinking</br>Brasil</h1>
 			<p>Published in late 2011, this book was the first national publication about Design Thinking and quickly became a best-seller in the country. Written with Tenny Pinheiro, it shows readers how empathy, collaboration and experimentation can have a great impact on people, business and societies with local cases and a how-to approach.</p>
 			</div>
 		</div>
 
-		<div class="container-fluid servir-bem">
+		<div class="servir-bem">
 			<div class="container">
 			<h1>Servir bem p/</br>servir sempre!</h1>
 			<p>My upcoming book, that translates to “serve well to serve always!”, takes an inspirational approach to the world of services, focusing on the different elements that are capable of constituting a great - serving - business. Targeted to small and medium enterprises owners, the publication is another initiative to help raise the bar of service experiences in Brazil.</p>
 			</div>
 		</div>
 
-		<div class="container-fluid speaking">
+		<div class="speaking">
 			<div class="container">
 			<h1>Speaking</h1>
 			<p>Being an advocate of (the design of) services and a thought-leader in the field, I split my agenda between doing projects and speaking at events (or internally for organisations) in topics such as: Design Thinking, Service Design, Customer Experience, Design Management, High-Performance Cultures and Innovation (Metrics). </p>
@@ -100,7 +100,7 @@
 		
 		</div>
 
-		<div class="container-fluid teaching">
+		<div class="teaching">
 			
 			<div class="container">
 			<h1>Teaching</h1>
@@ -128,7 +128,7 @@
 
 	</div>
 
-	<div class="container-fluid contact">
+	<div class="contact">
 
 		<div class="colophon">
 			<h2>Get in Touch!</h2>
